--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="item item--1">1:red</div>
+      <div class="item item--2">2:green</div>
+      <div class="item item--3">3:blue</div>
+      <div class="item item--4">4:oreange</div>
+      <div class="item item--5">5:lightblue</div>
+      <div class="item item--6">6:lightgreen</div>
+    </div>
+  </body>
 </html>
