--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="item item--1">1:red</div>
-      <div class="item item--2">2:green</div>
-      <div class="item item--3">3:blue</div>
-      <div class="item item--4">4:oreange</div>
-      <div class="item item--5">5:lightblue</div>
-      <div class="item item--6">6:lightgreen</div>
+      <header class="heading">header</header>
+      <div class="box--1">box 1</div>
+      <div class="box--2">box 2</div>
+      <div class="box--3">box 3</div>
+      <div class="main-content">main content</div>
+      <div class="sidebar">sidebar</div>
+      <div class="footer">footer</div>
     </div>
   </body>
 </html>
